fix md paragraph spacing

--- a/src/includes/global.css
+++ b/src/includes/global.css
@@ -110,12 +110,12 @@ html[data-theme='dark'] .theme-toggle:after {
 }
 
 .md p {
-  margin: 1rem 0 1rem 0;
+  margin: 1rem 0 0.75rem 0;
 }
 
-.md p:last-of-type {
+.md p:last-child {
   display: inline-block;
-  padding-bottom: 2.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .md h2 ~ p {
